@@ -74,6 +74,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #4084: Fix max, min, max_mag and min_mag Decimal methods to
+  give correct results in the case where one argument is a quiet NaN
+  and the other is a finite number that requires rounding.
+
 - Issue #1030250: Distutils created directories even when run with the
   --dry-run option.
 
